# kiln

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DECISIONS.md
docs/user/: configuration.md  getting-started.md  sessions.md  shortcuts.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/shell/: kiln.bash  kiln.fish  kiln.zsh
src-tauri/src/: commands.rs  completions.rs  config.rs  lib.rs  main.rs  parser.rs  session.rs  shell_integration.rs
src/components/: Autocomplete.tsx  BlockComponent.tsx  Button.tsx  CommandPalette.tsx  ErrorBoundary.tsx  InteractiveMode.tsx  Search.tsx  SessionSwitcher.tsx  SystemMessage.tsx  WelcomeScreen.tsx
src/components/previews/: CsvPreview.tsx  DataTable.tsx  DiffPreview.tsx  JsonPreview.tsx  MarkdownPreview.tsx  SqlPreview.tsx  TablePreview.tsx  YamlPreview.tsx  index.ts
src/hooks/: useActiveSession.ts  useCompletions.ts  useKeyboardShortcuts.ts  useTauriEvents.ts
src/store/: index.ts  types.ts
src/utils/: clipboard.ts  contentDetector.ts  fuzzyMatch.ts  interactive.ts  linkDetector.ts  segmentLines.ts  session.ts
