[package]
name = "kiln"
version = "0.1.0"
edition = "2021"
description = "A modern command runner for developers"
license = "MIT"

[lib]
name = "kiln_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
base64 = "0.22"
toml = "0.8"
notify = "7"
